# free-llm-api

./: .env.example  .gitignore  README.md  example.py  list_models.py  pyproject.toml  requirements.txt  server.py  try_models.py
docs/: ADVANCED.md
free_llm_api/: __init__.py  config.yaml  endpoints.py  errors.py  manager.py
free_llm_api/providers/: base.py
free_llm_api/utils/: __init__.py  config_loader.py
llm_api_wrapper/: __init__.py  config.yaml  endpoints.py  errors.py  manager.py  scheduler.py
llm_api_wrapper/providers/: __init__.py  base.py  huggingface_provider.py  openai_provider.py  registry.py
llm_api_wrapper/utils/: __init__.py  config_loader.py
tests/: example.py  list_models.py  test_wrapper.py  try_models.py
