[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "free-llm-api"
version = "0.1.0"
description = "FreeLLMAPI — Resilient router across free LLM API providers with failover, weighted scheduling, and hot-reloadable config."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "requests>=2.28",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
packages = [
    "free_llm_api",
    "free_llm_api.providers",
    "free_llm_api.utils",
]

[tool.setuptools.package-data]
free_llm_api = ["config.yaml"]
